--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.5",
+    "@supabase/supabase-js": "^2.33.2",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
+    "openai": "^4.6.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "supabase": "^1.93.0",
     "tailwindcss": "3.3.3"
   }
 }
