--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "openai": "^4.6.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
